Consider using valueOf() to allow caching of values.